# Bullscript

./: Cargo.toml  README.md
src/: bullscript_ui.rs  main.rs
src/modes/: mod.rs  test.rs  update.rs
