[package]
name    = "bullscript"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "bullscript"
path = "src/main.rs"

[dependencies]
rustyline = "14"
bullang = { git = "https://github.com/The-Bullang-Foundation/Bullang.git" }
clap    = { version = "=4.4.18", features = ["derive"] }
serde_json = "1"